k8s/hello-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: prod-space
  labels:
    app: hello-app
spec:
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: hello-app
          image: devsjayanth/hello-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
