k8s/hello-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: prod-space
  labels:
    app: hello-app
    app.kubernetes.io/name: hello-app
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
