k8s/hello-app-mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: prod-space
spec:
  ingressClassName: nginx
  rules:
    - host: "ec2-35-154-154-168.ap-south-1.compute.amazonaws.com"
      http:
        paths:
          - path: /mongo
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 8000
